--- a/src/assets/javascript/plupload/plupload.queue.css
+++ b/src/assets/javascript/plupload/plupload.queue.css
@@ -1,6 +1,18 @@
-/* 
-   Plupload
-------------------------------------------------------------------- */
+
+/**
+ * Plupload
+ * 
+ * Released under GPLv2 License.
+ * Contributing: http://www.plupload.com/contributing
+ *
+ * @author		The Developers of TinyMCE
+ * @copyright   Copyright 2009, Moxiecode Systems AB
+ * @license		http://www.plupload.com/license GPLv2
+ * @link		http://www.plupload.com
+ * @package     Plupload
+ * @category    Aiki
+ * @filesource
+ */
 
 .plupload_button {
 	display: -moz-inline-box; /* FF < 3*/
