--- a/src/assets/javascript/jquery/plugins/jstree/themes/default/style.css
+++ b/src/assets/javascript/jquery/plugins/jstree/themes/default/style.css
@@ -1,3 +1,17 @@
+/*
+ * jsTree 0.9.8
+ * http://jstree.com/
+ *
+ * Copyright (c) 2009 Ivan Bozhanov (vakata.com)
+ *
+ * Dual licensed under the MIT and GPL licenses:
+ *   http://www.opensource.org/licenses/mit-license.php
+ *   http://www.gnu.org/licenses/gpl.html
+ *
+ * Date: 2009-05-15
+ *
+ */
+
 /* LOCKED */
 .tree-default .locked li a { color:gray; }
 /* DOTS */
