--- a/assets/themes/default/installer_upgrader.css
+++ b/assets/themes/default/installer_upgrader.css
@@ -22,9 +22,7 @@ body {
 select,
 input {
 	font: normal normal normal 14px/18px sans-serif ;
-
 }
-
 
 #page {
 	margin: 40px auto;
@@ -246,8 +244,19 @@ textarea.errordump {
 #welcome {	
 	line-height: 1.4em;	
 	padding:12px;
-	margin-bottom: 24px;
+	margin-bottom: 12px;
 }
+
+#revisions {		
+    color: #000;
+	padding:4px 0px 4px 12px;
+	border-bottom: 1px dashed #000;
+	width: 350px;
+	position: relative;
+	left:-12px;
+	margin-bottom:4px;
+}
+
 
 div.links {
   position: relative;
